# pyetl-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
control/: schema.py  seed.py
docs/: configuration.md
examples/fhrs/: run.py
examples/road_safety/: register.py  run.py
pyetl/: __init__.py  config.py  engine.py  extractor.py  loader.py  quality.py  registry.py  transformer.py
pyetl/adapters/: api.py  postgres.py
tests/: test_quality.py  test_registry.py  test_transformer.py
